--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/csv-parse": "^1.2.2",
     "@types/eslint": "^8.2.0",
     "@types/express": "^4.17.13",
@@ -32,6 +33,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "csv-parse": "^5.0.3",
     "express": "^4.17.1",
     "multer": "^1.4.4",
