--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/csv-parse": "^1.2.2",
     "@types/eslint": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.7",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
@@ -36,6 +37,7 @@
     "bcrypt": "^5.0.1",
     "csv-parse": "^5.0.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
