--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "@types/csv-parse": "^1.2.2",
     "@types/eslint": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.7",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
@@ -30,6 +31,7 @@
     "eslint-plugin-import-helpers": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.0",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   },
@@ -38,6 +40,7 @@
     "csv-parse": "^5.0.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jest": "^27.4.7",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "pg": "^8.7.1",
